--- a/angular-version/assets/style.css
+++ b/angular-version/assets/style.css
@@ -65,3 +65,86 @@
 .codelabel-line a {
     cursor: pointer;
 }
+
+
+/* code editor */
+.editor-container {
+    position: relative;
+    width: 600px;
+    height: 400px;
+    overflow: visible;
+}
+
+.highlighted-code,
+.code-input {
+    font-family: monospace;
+    font-size: 14px;
+    line-height: 1.5;
+    white-space: pre-wrap;
+    padding: 5px;
+    box-sizing: border-box;
+    width: 100%;
+    /*height: 100%;*/
+    /*overflow-y: hidden;*/
+}
+
+.highlighted-code {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    pointer-events: none;
+    overflow: hidden;  /* Prevent inner overflow from appearing */
+    color: black; /* Base text is transparent; only highlighted spans show color */
+    /*padding-bottom: 50rem; !* Make it long enough for the coloring to follow *!*/
+}
+
+.panel-body {
+    height: auto;
+}
+
+.highlighted-code .function {
+    color: #d000ff;
+    font-weight: bolder;
+}
+
+.highlighted-code .comment {
+    color: #868686;
+}
+
+.highlighted-code .var {
+    color: #003cb7;
+}
+
+.highlighted-code .string {
+    color: #066700;
+}
+
+.highlighted-code .num {
+    color: #ff3e3e;
+}
+
+.highlighted-code .hexa {
+    color: #ff3e3e;
+}
+
+.highlighted-code .addr {
+    color: #0000ff;
+}
+
+
+.code-input {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    border: 1px solid #ccc;
+    resize: vertical; /* Enable resizing */
+    z-index: 1;
+    color: transparent;
+    pointer-events: auto;
+    caret-color: #000;
+    overflow: auto; /* Ensure scrollbars appear when needed */
+}
+
